# musicplayer

./: HELP.md  README.md  pyproject.toml
src/musicplayer/: __init__.py  music_player.css  music_player.py
