[project]
name = "musicplayer"
version = "0.0.13"
description = "Simple music player"
readme = "README.md"
authors = [
    { name = "Daniel Engval", email = "daniel@engvalls.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "eyed3>=0.9.8",
    "loguru>=0.7.3",
    "persist-cache>=0.4.4",
    "pillow==10.4.0",
    "platformdirs>=4.3.8",
    "pygame==2.6.1",
    "rich==13.9.4",
    "rich-pixels==2.2.0",
    "textual[dev]==0.24.1",
    "tinytag==1.10.1",
]

[project.scripts]
musicplayer = "musicplayer.music_player:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicplayer"]
