[project]
name = "musicplayer"
version = "2025.10.1"
description = "Simple music player"
readme = "README.md"
authors = [
    { name = "Daniel Engval", email = "daniel@engvalls.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts",
    "eyed3>=0.9.8",
    "loguru",
    "persist-cache>=0.4.4",
    "pillow==10.4.0",
    "platformdirs>=4.3.8",
    "pygame==2.6.1",
    "rich",
    "rich-pixels",
    "textual==6.1.0",
    "tinytag==1.10.1",
]

[project.scripts]
musicplayer = "musicplayer.music_player:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicplayer"]
